syntax = "proto3";

package proto;

option go_package = "github.com/cybozu-go/mantle/pkg/controller/proto";

// CreateOrUpdatePVCRequest is a request message for CreateOrUpdatePVC RPC.
message CreateOrUpdatePVCRequest {
    bytes pvc = 1;
}

// CreateOrUpdatePVCResponse is a response message for CreateOrUpdatePVC RPC.
message CreateOrUpdatePVCResponse {
    string uid = 1;
}

// CreateMantleBackupRequest is a request message for CreateMantleBackup RPC.
message CreateMantleBackupRequest {
    bytes mantleBackup = 1;
}

// CreateMantleBackupResponse is a response message for CreateMantleBackup RPC.
message CreateMantleBackupResponse {
    // nothing.
}

// ListMantleBackupRequest is a request message for ListMantleBackup RPC.
message ListMantleBackupRequest {
    string pvcUID = 1;
    string namespace = 2;
}

// ListMantleBackupResponse is a response message for ListMantleBackup RPC.
message ListMantleBackupResponse {
    bytes mantleBackupList = 1;
}

// SetSynchronizingRequest is a request message for SetSynchronize RPC.
message SetSynchronizingRequest {
    string name = 1;
    string namespace = 2;
    optional string diffFrom = 3;
}

// SetSynchronizingResponse is a response message for SetSynchronize RPC.
message SetSynchronizingResponse {
}

service MantleService {
    rpc CreateOrUpdatePVC(CreateOrUpdatePVCRequest) returns (CreateOrUpdatePVCResponse);
    rpc CreateMantleBackup(CreateMantleBackupRequest) returns (CreateMantleBackupResponse);
    rpc ListMantleBackup(ListMantleBackupRequest) returns (ListMantleBackupResponse);
    rpc SetSynchronizing(SetSynchronizingRequest) returns (SetSynchronizingResponse);
}
